<resources>
    <string name="app_name">DataBindingGoods</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_fragment">User fragment</string>
    <string name="goods_fragment">Goods fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="goods_hint_title">Title</string>
    <string name="goods_hint_price">Price</string>
    <string name="goods_hint_country">Country</string>

    <string name="goods_no_item">No objects</string>

    <string name="item_switch_title">On/Off</string>
</resources>
