<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.MainActivityFragment">

    <data>

        <import
            alias="userFragment"
            type="com.mogsev.application.databindinggoods.fragment.UserFragment" />

        <variable
            name="activity"
            type="com.mogsev.application.databindinggoods.MainActivity" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:onClick="@{() -> activity.runFragmentTransaction(userFragment.newInstance, userFragment.TAG)}"
                        android:text="@string/user_fragment" />

                    <Button
                        android:id="@+id/btnGoodsFragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/goods_fragment" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switchTimeAm"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_switch"
                        android:paddingLeft="@dimen/padding_8"
                        android:paddingRight="@dimen/padding_8"
                        android:text="@string/item_switch_title"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:theme="@style/AppTheme.Switch"
                        android:track="@android:color/transparent" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </FrameLayout>

</layout>
