<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="goods"
            type="com.mogsev.application.databindinggoods.model.Goods" />

        <variable
            name="adapter"
            type="com.mogsev.application.databindinggoods.adapter.RVGoodsAdapter" />

        <variable
            name="fragment"
            type="com.mogsev.application.databindinggoods.fragment.GoodsFragment" />

    </data>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_2"
        app:cardElevation="@dimen/elevation_4"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_4" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:hint="@string/goods_hint_title"
                    android:text="@{goods.title}" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_4"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/remove"
                    android:onClick="@{() -> adapter.onRemove(goods)}" />

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mob" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:hint="@string/goods_hint_price"
                    android:text="@{String.valueOf(goods.price)}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_4"
                    android:background="?attr/selectableItemBackground"
                    android:hint="@string/goods_hint_country"
                    android:onClick="@{() -> fragment.onFilterCountry(goods)}"
                    android:text="@{goods.country}" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</layout>